# Investment-Research-Assistant

./: .env  README.md  pyproject.toml  rag.ipynb
chroma_db_data/3d8b46e6-3053-4001-b735-730593ad39eb/: index_metadata.pickle
exportToHTML/: rag.ipynb.html
